# BBB_motor_data_extraction

./: CMakeLists.txt  M_GPIO.h  M_PWM.h  R_COM.h  main.cpp
